--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>freeCodeCamp : Building a Personal Portfolio Webpage</title>
   <title>Rapid Application Development</title>
   
-  <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
@@ -89,7 +89,7 @@
   <div id="footer-above">
     <div>
       <h3>About this page</h3>
-      <p>Made with <i class="glyphicon glyphicon-heart"></i> and <i class="glyphicon glyphicon-music"></i><br/>by <a href="http://silvanet.info">Ray Silva</a>.</p>
+      <p>Made with <i class="glyphicon glyphicon-heart"></i> and <i class="glyphicon glyphicon-music"></i><br/>by <a href="https://silvanet.info">Ray Silva</a>.</p>
     </div>
     <div>
       <h3>Around the Web</h3>
@@ -105,10 +105,10 @@
     <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
   </div>
 </footer>
-<!-- <aside id="html5badge"><img src="http://www.w3.org/html/logo/badge/html5-badge-v-css3-graphics-semantics.png" width="38" height="170" alt="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics" title="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics"></aside>-->
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
-<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+<!-- <aside id="html5badge"><img src="https://www.w3.org/html/logo/badge/html5-badge-v-css3-graphics-semantics.png" width="38" height="170" alt="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics" title="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics"></aside>-->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
   
 
