--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         
     </div><img src="images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."/>
   </header>
+  <!--Projects Section-->
+  <section id="projects">
+    <div class="project-title">
+      <a href="https://codepen.io/silvanet/pen/eMQxpB">Nagarjuna Tribute Page</a>
+    
+  </section>  
+  
+  
+  
   <!-- Gallery Grid Section-->
   <section id="portfolio">
     <h2>Portfolio</h2>
