--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- end header--><a id="top" name="home"></a>
 <main>
   <header>
-    <div id="WELCOME-SECTION">
+    <div id="WELCOME-SECTION">WELCOME</div>
       <h1>Hi, I'm Ray.</h1>
       <p>I've done some application development in visual basic for Windows Office Apps (Access & Excel). I'm learning Front-End Development. I've got practical experience in IT Financial Services Chargebacks; I'm learning Full-Stack JavaScript and Data Mining.</p>
       <hr class="star-bright"/><span class="skills">Web Developer, Forensics</span>    
@@ -41,7 +41,7 @@
     </div><img src="images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."/>
   </header>
   <!--Projects Section-->
-  <section id="projects">
+  <section id="projects">FCC projects</div>
     <div class="project-title">
       <a href="https://codepen.io/silvanet/pen/eMQxpB">Nagarjuna Tribute Page</a>
     
