--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <section id="projects">
     <h2>FCC projects</h2>
     <div class="project-title">
-      <a href="https://codepen.io/silvanet/pen/eMQxpB">Nagarjuna Tribute Page</a>
+      <a href="https://silvanet.github.io/Nagarjuna/">Nagarjuna Tribute Page</a>
     
   </section>  
   
