--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <h3>Around the Web</h3>
       <ul>
         <li><a class="button social" href="https://www.linkedin.com/in/silvanet"><i class="fa fa-fw fa-linkedin"></i></a></li>
-        <li><a class="button social" href="https://github.com/silvanet/Portfolio"><i class="fa fa-fw fa-github"></i></a></li>
+        <li><a class="button social" href="https://github.com/silvanet"><i class="fa fa-fw fa-github"></i></a></li>
         <li><a class="button social" href="https://twitter.com/silvanet"><i class="fa fa-fw fa-twitter"></i></a></li>
         <li><a class="button social" href="https://www.flickr.com/photos/silvanet/" title="My Flickr"><i class="fa fa-fw fa-flickr"></i></a></li>
       </ul>
