--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div>
       <h3>Around the Web</h3>
       <ul>
-        <li><a class="button social" href="https://www.linkedin.com/in/silvanet" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
+        <li><a class="button social" href="https://www.linkedin.com/in/silvanet/" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
         <li><a class="button social" href="https://github.com/silvanet" target="_blank"><i class="fa fa-fw fa-github"></i></a></li>
         <li><a class="button social" href="https://twitter.com/silvanet target="_blank""><i class="fa fa-fw fa-twitter"></i></a></li>
         <li><a class="button social" href="https://www.flickr.com/photos/silvanet/" title="My Flickr" target="_blank"><i class="fa fa-fw fa-flickr"></i></a></li>
