--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h2>FCC projects</h2>
     <div class="project-title">
       <a href="https://silvanet.github.io/Nagarjuna/">Nagarjuna Tribute Page</a>
-    
+    </div>
   </section>  
   
   
