--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>freeCodeCamp : Building a Personal Portfolio Webpage</title>
   <title>Rapid Application Development</title>
   
