--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="projects">
     <h2>FCC projects</h2>
     <div class="project-title">
-      <a href="https://silvanet.github.io/Nagarjuna/">Nagarjuna Tribute Page</a>
+      <a href="https://silvanet.github.io/Nagarjuna/" target="_blank">Nagarjuna Tribute Page</a>
     </div>
   </section>  
   
