--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
 <!-- end header--><a id="top" name="home"></a>
 <main>
-  <header>
+  <!--<header>-->
     <div id="WELCOME-SECTION">
       <h1>Hi, I'm Ray.</h1>
       <p>I've done some application development in visual basic for Windows Office Apps (Access & Excel). I'm learning Front-End Development. I've got practical experience in IT Financial Services Chargebacks; I'm learning Full-Stack JavaScript and Data Mining.</p>
@@ -40,7 +40,7 @@
     </div>
         
     </div><img src="images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."/>
-  </header>
+  <!--</header>-->
   <!--Projects Section-->
   <section id="projects">
     <h2>FCC projects</h2>
