--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  
   <title>freeCodeCamp : Building a Personal Portfolio Webpage</title>
   <title>Rapid Application Development</title>
   
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
       <link rel="stylesheet" href="css/style.css">
 
   
@@ -19,7 +18,7 @@
 
   
 <header class="navbar navbar-default navbar-fixed-top" id="banner">
-  <div class="container"><a class="scrollable" href="#top"><img src="images/20120210_124729.jpg" alt="silvanet | Rapid Application Development" title="silvanet | Rapid Application Development"/></a>
+  <div class="container"><a class="scrollable" href="#top"><img src="./images/20120210_124729.jpg" alt="silvanet | Rapid Application Development" title="silvanet | Rapid Application Development"/></a>
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav class="collapse navbar-collapse" id="navbar" role="navigation">
       <ul class="nav navbar-nav navbar-right">
@@ -29,27 +28,15 @@
       </ul>
     </nav>
   </div>
+</header>
 <!-- end header--><a id="top" name="home"></a>
 <main>
   <header>
-    <div id="WELCOME-SECTION">
-      <h1>Hi, I'm Ray.</h1>
-      <p>I've done some application development in visual basic for Windows Office Apps (Access & Excel). I'm learning Front-End Development. I've got practical experience in IT Financial Services Chargebacks; I'm learning Full-Stack JavaScript and Data Mining.</p>
-      <hr class="star-bright"/><span class="skills">Web Developer, Forensics</span>    
-    </div>
-        
-    </div><img src="images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."/>
+    <div class="intro-text">
+      <p>Rapid Application Development in Visual Basic for Windows Office Apps (Access & Excel) Front-End Developer, with practical experience in IT Financial Services Chargebacks, Learning Full-Stack JavaScript and Data Mining.</p>
+      <hr class="star-bright"/><span class="skills">Web Developer, Forensics</span>
+    </div><img src="./images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."/>
   </header>
-  <!--Projects Section-->
-  <section id="projects">
-    <h2>FCC projects</h2>
-    <div class="project-title">
-      <a href="https://silvanet.github.io/Nagarjuna/" target="_blank">Nagarjuna Tribute Page</a>
-    </div>
-  </section>  
-  
-  
-  
   <!-- Gallery Grid Section-->
   <section id="portfolio">
     <h2>Portfolio</h2>
@@ -102,15 +89,15 @@
   <div id="footer-above">
     <div>
       <h3>About this page</h3>
-      <p>Made with <i class="glyphicon glyphicon-heart"></i> and <i class="glyphicon glyphicon-music"></i><br/>by <a href="https://silvanet.info">Ray Silva</a>.</p>
+      <p>Made with <i class="glyphicon glyphicon-heart"></i> and <i class="glyphicon glyphicon-music"></i><br/>by <a href="http://silvanet.us">Ray Silva</a>.</p>
     </div>
     <div>
       <h3>Around the Web</h3>
       <ul>
-        <li><a class="button social" href="https://www.linkedin.com/in/silvanet/" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
-        <li><a class="button social" id="profile-link" href="https://github.com/silvanet" target="_blank"><i class="fa fa-fw fa-github"></i></a></li>
-        <li><a class="button social" href="https://twitter.com/silvanet" target="_blank""><i class="fa fa-fw fa-twitter"></i></a></li>      
-        <li><a class="button social" href="https://www.flickr.com/photos/silvanet/" title="My Flickr" target="_blank"><i class="fa fa-fw fa-flickr"></i></a></li>
+        <li><a class="button social" href="https://www.linkedin.com/in/silvanet"><i class="fa fa-fw fa-linkedin"></i></a></li>
+        <li><a class="button social" href="https://github.com/silvanet"><i class="fa fa-fw fa-github"></i></a></li>
+        <li><a class="button social" href="https://twitter.com/silvanet"><i class="fa fa-fw fa-twitter"></i></a></li>
+        <li><a class="button social" href="https://www.flickr.com/photos/silvanet/" title="My Flickr"><i class="fa fa-fw fa-flickr"></i></a></li>
       </ul>
     </div>
   </div>
@@ -123,12 +110,11 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>  
   
 
     <script  src="js/script.js"></script>
 
-
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 
 </body>
