--- a/index.html
+++ b/index.html
@@ -1,120 +1,160 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>freeCodeCamp : Building a Personal Portfolio Webpage</title>
-  <title>Rapid Application Development</title>
-  
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+    <meta charset="UTF-8">
+    <title>FreeCodeCamp Personal Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
-
-  
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-  
-<header class="navbar navbar-default navbar-fixed-top" id="banner">
-  <div class="container"><a class="scrollable" href="#top"><img src="./images/20120210_124729.jpg" alt="silvanet | Rapid Application Development" title="silvanet | Rapid Application Development"/></a>
-    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-    <nav class="collapse navbar-collapse" id="navbar" role="navigation">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="scrollable" href="#top">About</a></li>
-        <li><a class="scrollable" href="#portfolio">Portfolio</a></li>
-        <li><a class="scrollable" href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<!-- end header--><a id="top" name="home"></a>
-<main>
-  <header>
-    <div class="intro-text">
-      <p>Rapid Application Development in Visual Basic for Windows Office Apps (Access & Excel) Front-End Developer, with practical experience in IT Financial Services Chargebacks, Learning Full-Stack JavaScript and Data Mining.</p>
-      <hr class="star-bright"/><span class="skills">Web Developer, Forensics</span>
-    </div><img src="./images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."/>
-  </header>
-  <!-- Gallery Grid Section-->
-  <section id="portfolio">
-    <h2>Portfolio</h2>
-    <hr class="star-dark"/>
-    <ul class="grid">
-      <li><img src="" alt=""/></li>
-      <li><img src="" alt=""/></li>
-      <li><img src="" alt=""/></li>
-      <li><img src="" alt=""/></li>
-      <li><img src="" alt=""/></li>
-      <li><img src="" alt=""/></li>
-    </ul>
-  </section>
-  <!-- Contact Section-->
-  <section id="contact">
-    <h2>Contact Form</h2>
-    <hr class="star-dark"/>
-    <div>
-      <form id="contactForm" novalidate="">
-        <div class="form-item">
-          <label for="“name”">Name</label>
-          <input id="name" type="text" placeholder="Name" required=""/>
+    <header class="navbar navbar-default navbar-fixed-top" id="banner">
+        <div class="container">
+            <a class="scrollable" href="#top">
+                <img src="./images/20120210_124729.jpg" alt="silvanet | Rapid Application Development" title="silvanet | Rapid Application Development"
+                />
+            </a>
+            <!--                
+            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            -->
+            <nav class="collapse navbar-collapse" id="navbar" role="navigation">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="scrollable" href="#top">Welcome</a>
+                    </li>
+                    <li>
+                        <a class="scrollable" href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a class="scrollable" href="#contact">Contact Me</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <div class="form-item">
-          <label for="“email”">Email</label>
-          <input id="email" type="email" placeholder="Email" required=""/>
+    </header>
+    <!-- end navbar header-->
+    <a id="top" name="home"></a>    
+    <main>        
+        <!--Welcome-Section-->
+        <header>
+            <section id="WELCOME-SECTION"></section>
+            <div class="intro-text" id="welcome-section">
+                <h1>Hi, I'm Ray</h1>
+                <p>Visual Basic for Windows Office (Access & Excel) front-end, experience in IT financial
+                   services, legal forensic evidence consulting, corporate counsel, student of JavaScript and Data Mining.</p>
+                <hr class="star-bright" />
+                <span class="skills">Web Developer, Forensics</span>
+            </div>
+            <img src="./images/20120210_124729.jpg" alt="A picture of Ray and his daughter in Chicago" title="A picture of Ray and his daughter in Chicago."
+            />
+            </section>
+        </header>        
+        <!--Profile LInk-->
+        <!--Projects Section-->        
+        <section id="projects">
+            <h2>Projects</h2>
+            <center><a href="https://github.com/silvanet" id="profile-link" target="_blank">My Github Profile</a></center>
+            <div class="project-tile">
+                <ul class="grid">
+                    <li>
+                        <a href="https://silvanet.github.io/Nagarjuna/">Nagarjuna Tribute Page</a>
+                    </li>
+                </ul>
+            </div>
+        </section>        
+        <!-- Contact Section-->
+        <section id="contact">
+            <h2>Contact me</h2>            
+            <div>
+                <form id="contactForm" novalidate="">
+                    <div class="form-item">
+                        <label for="“name”">Your Name</label>
+                        <input id="name" type="text" placeholder="Name" required="" />
+                    </div>
+                    <div class="form-item">
+                        <label for="“email”">Your Email</label>
+                        <input id="email" type="email" placeholder="Email" required="" />
+                    </div>
+                    <div class="form-item">
+                        <label for="“message”">Message</label>
+                        <textarea id="message" rows="5" placeholder="Message" required=""></textarea>
+                    </div>
+                    <br/>
+                    <button type="submit">Send</button>
+                </form>
+                <div>
+                    <p>Drop me a note.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Scroll to Top Button (Only supposed to be visible on small and small screen sizes)-->
+        <div class="scroll-top">
+            <a class="button scrollable" href="#top">
+                <i class="fa fa-chevron-up"></i>
+            </a>
         </div>
-        <div class="form-item">
-          <label for="“phone”">Phone</label>
-          <input id="phone" type="tel" placeholder="Phone" required=""/>
+    </main>
+    <!-- Footer-->
+    <footer>
+        <div id="footer-above">
+            <div>
+                <h3>About this page</h3>
+                <p>Made with
+                    <i class="glyphicon glyphicon-heart"></i> and
+                    <i class="glyphicon glyphicon-music"></i>
+                    <br/>by
+                    <a href="http://silvanet.us" target="_blank">Ray Silva</a>.</p>
+            </div>
+            <div>
+                <h3>Around the Web</h3>
+                <ul>
+                    <li>
+                        <a class="button social" href="https://www.linkedin.com/in/silvanet">
+                            <i class="fa fa-fw fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="button social" href="https://github.com/silvanet">
+                            <i class="fa fa-fw fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="button social" href="https://twitter.com">
+                            <i class="fa fa-fw fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="button social" href="https://www.flickr.com/photos/silvanet/" title="My Flickr" taget="_blank">
+                            <i class="fa fa-fw fa-flickr"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="form-item">
-          <label for="“message”">Message</label>
-          <textarea id="message" rows="5" placeholder="Message" required=""></textarea>
-        </div><br/>
-        <button type="submit">Send</button>
-      </form>
-      <div>
-        <p>Want to get in touch with me? Drop me a note.</p>
-        <p>I will reply as soon as I can.</p>
-        <p>Please: No spam:)</p>
-      </div>
-    </div>
-  </section>
-  <!-- Scroll to Top Button (Only supposed to be visible on small and small screen sizes)-->
-  <div class="scroll-top"><a class="button scrollable" href="#top"><i class="fa fa-chevron-up"></i></a></div>
-</main>
-<!-- Footer-->
-<footer>
-  <div id="footer-above">
-    <div>
-      <h3>About this page</h3>
-      <p>Made with <i class="glyphicon glyphicon-heart"></i> and <i class="glyphicon glyphicon-music"></i><br/>by <a href="http://silvanet.us">Ray Silva</a>.</p>
-    </div>
-    <div>
-      <h3>Around the Web</h3>
-      <ul>
-        <li><a class="button social" href="https://www.linkedin.com/in/silvanet"><i class="fa fa-fw fa-linkedin"></i></a></li>
-        <li><a class="button social" href="https://github.com/silvanet"><i class="fa fa-fw fa-github"></i></a></li>
-        <li><a class="button social" href="https://twitter.com/silvanet"><i class="fa fa-fw fa-twitter"></i></a></li>
-        <li><a class="button social" href="https://www.flickr.com/photos/silvanet/" title="My Flickr"><i class="fa fa-fw fa-flickr"></i></a></li>
-      </ul>
-    </div>
-  </div>
-  <div id="footer-below">silvanet © 
-    <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
-  </div>
-</footer>
-<!-- <aside id="html5badge"><img src="https://www.w3.org/html/logo/badge/html5-badge-v-css3-graphics-semantics.png" width="38" height="170" alt="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics" title="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics"></aside>-->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+        <div id="footer-below">silvanet ©
+            <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
+        </div>
+    </footer>
+    <!-- <aside id="html5badge"><img src="https://www.w3.org/html/logo/badge/html5-badge-v-css3-graphics-semantics.png" width="38" height="170" alt="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics" title="HTML5 Powered with CSS3 / Styling, Graphics, 3D &amp; Effects, and Semantics"></aside>-->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 
-  
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <script  src="js/script.js"></script>
+    <script src="js/script.js"></script>
 
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 
 
 </body>
