--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--I picked a lot from my researching. Removed stuff and added stuff. Still have to clean up the style file, as it had
+a lot more than I needed. I'll also try to go back and give credit where I got feataures and ideas-->
 <html lang="en">
 
 <head>
